k8s/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-spring-deployment
  labels:
    app: hello-spring-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-spring-deployment
  template:
    metadata:
      name: hello-spring-deployment
      labels:
        app: hello-spring-deployment
    spec:
      containers:
        - name: hello-spring-deployment
          image: my-spring-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /l7check
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /l7check
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always
